--- a/pubs.yaml
+++ b/pubs.yaml
@@ -1,7 +1,7 @@
 publications:
   - title: "Teacher Assistant-Based Knowledge Distillation Extracting Multi-level Features on Single Channel Sleep EEG"
     authors: "Heng Liang, Yucheng Liu, Haichao Wang, Ziyu Jia, B Center"
-    venue: "Proceedings of the Thirty-Second International Joint Conference on Artificial Intelligence"
+    venue: "IJCAI"
     year: 2023
     tags: "IJCAI2023, Knowledge Distillation, Sleep EEG"
     links:
@@ -10,7 +10,7 @@ publications:
 
   - title: "Emotionkd: a cross-modal knowledge distillation framework for emotion recognition based on physiological signals"
     authors: "Yucheng Liu, Ziyu Jia, Haichao Wang"
-    venue: "Proceedings of the 31st ACM international conference on multimedia"
+    venue: "ACM MM"
     year: 2023
     pages: "6122-6131"
     tags: "ACMMM2023, Knowledge Distillation, Emotion Recognition"
@@ -29,7 +29,7 @@ publications:
 
   - title: "Mutual distillation extracting spatial-temporal knowledge for lightweight multi-channel sleep stage classification"
     authors: "Ziyu Jia, Haichao Wang, Yucheng Liu, T Jiang"
-    venue: "Proceedings of the 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining"
+    venue: "ACM SIGKDD"
     year: 2024
     tags: "KDD2024, Mutual Distillation, Sleep Classification, Spatial-temporal Learning"
     links:
@@ -46,8 +46,8 @@ publications:
       - label: arXiv
         href: https://arxiv.org/abs/2501.15119
 
-  - title: "Fast Motion Estimation and Context-Aware Refinement for Efficient Bayer-Domain Video Vision"
-    authors: "Haichao Wang, X Xi, J Wen, Y Han"
+  - title: "Efficient Bayer-Domain Video Computer Vision with Fast Motion Estimation and Learned Perception Residual"
+    authors: "Haichao Wang, J Wen, Y Han"
     venue: "arXiv preprint"
     year: 2025
     arxiv: "arXiv:2508.05990"
